src/components/edit/TranslatedInput.module.css
.translatedInput {
  display: flex;
  align-items: flex-start;
  flex-direction: row;
  justify-content: space-between;
}
.content {
  display: flex;
  align-items: flex-start;
  flex-grow: 1;
  width: 100%;
}

.translationHelp {
  background: rgba(var(--on-background-rgb), 0.1);
  color: var(--on-background-rgb);
  padding: 0 var(--basis);
  margin: 0 0 0 var(--basis);
  width: calc(100% - var(--basis_x2));
}

.changeLocaleButton {
  margin: 0 0 0 var(--basis);
  opacity: 0;
}
.translatedInput:hover .changeLocaleButton{
  opacity: 1;
}

@media (max-width: 800px) {
  .content {
    flex-direction: column;
    align-items: stretch;
  }
  .translationHelp {
    margin: var(--basis) 0 0 0;
  }
  .changeLocaleButton{
    opacity: 1;
  }
}

